change to pool result

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -78,7 +78,7 @@ $(document).ready(function() {
     $('#pick_log_list').change(function() {
         //var elmt = document.getElementById("pick_log_list");
         //elmt.scrollIntoView(false);
-        #$('#pick_log_list').scrollTop($('#pick_log_list').height());
+        $('#pick_log_list').scrollTop($('#pick_log_list').height());
         console.log("pick_log_list function triggered")
     });
 
