--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -192,7 +192,7 @@ $(document).ready(function() {
         $('#next_pick_username').val(data['driver_pick']['pick_data']['next_pick']['username']);
         //$('option[value='driver_id']').hide();
         $('option[value=' + driver_id +']').hide();
-        $('#pick_log_list).val(data['driver_pick']['pick_data']['next_pick']['username']);
+        $('#pick_log_list').val(data['driver_pick']['pick_data']['next_pick']['username']);
 
     });
 
