change to pool result

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -51,9 +51,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-4" id="pick_log" >
+        <div class="col-sm-4">
             <p><b>Pick Log:</b></p>
-            <ul >
+            <ul id="pick_log">
                 <li>messages</li>
             </ul>
         </div>
