change to pool result

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -86,7 +86,7 @@ $(document).ready(function() {
     var elmt = document.getElementById("pick_log_list");
 
     $('#next_pick_username').change(function(){
-        if ($('#next_pick_username).val() == $('#current_user').val()) {
+        if ($('#next_pick_username').val() == $('#current_user').val()) {
         $('#choose_driver').disabled = false;
         console.log('button enabled')
         } else { $('#choose_driver').disabled = true;
