--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -6,11 +6,13 @@
     <a href="/nascar">Nascar Home</a>
 <h1>Welcome to Pool: {{room_data.room_name}}</h1>
 <h3>{{  username  }}</h3>
+<form>
 <input type="hidden" id="room_idA" name="room_idA" value="{{  room_data._id  }}">
 <input type="hidden" id="pool_pick_num" name="pool_pick_num" value=1>
 <input type="hidden" id="next_pick_username" name="next_pick_username" value=None>
 <input type="hidden" id="current_user" name="current_user" value="{{ current_user.username  }}">
 <br>
+</form>
 </div>
 <div class="container p-3 my-3 border border-primary">
     <div class="row">
