--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -87,7 +87,8 @@ $(document).ready(function() {
 
     var elmt = document.getElementById("pick_log_list");
 
-    $('#next_pick_username').bind('change', function(){
+    $("input[type='hidden']").bind("change", function() {
+    //$('#next_pick_username').bind('change', function(){
         var next_pick = $('#next_pick_username').val();
         var current = $('#current_user').val();
         if (next_pick == current) {
