change to pool result

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -182,7 +182,8 @@ $(document).ready(function() {
         console.log(data);
         console.log("in receive socket");
         var first_pick = data.pick_list[0]['username']
-        $('#next_pick_username').val('"' +first_pick +'"').trigger("change");
+        $('#next_pick_username').val('"' +first_pick +'"');
+        $('#next_pick_username').trigger("change");
         $('#pool_pick_num').val("1");
         $('#initial_message').remove();
         $('#pick_log').append('<li><b>'+ data.pick_list[0]['username'] +'</b> - picks first! </li>');
