--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -9,7 +9,7 @@
 <form>
 <input type="hidden" id="room_idA" name="room_idA" value="{{  room_data._id  }}">
 <input type="hidden" id="pool_pick_num" name="pool_pick_num" value=None>
-<input type="hidden" id="next_pick_username" name="next_pick_username" value=None>
+<input type="text" id="next_pick_username" name="next_pick_username" value=None>
 <input type="hidden" id="current_user" name="current_user" value="{{ current_user.username  }}">
 <br>
 </form>
