--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -273,8 +273,8 @@ $(document).ready(function() {
     }
 
     //$("input[type='hidden']").bind("change", function() {
-    $('#next_pick_username').on("change", function(){
-        var next_pick = $('#next_pick_username').val();
+    $('#next_pick_username').change(function(){
+        var next_pick = $(this).val();
         var current = $('#current_user').val();
         if (next_pick == current) {
         $('#choose_driver').disabled = false;
