--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-
+<form method="post">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+</form>
 
     <div class="container">
         <div class="media">
