Trouble shooting CORS issue on iphone

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -108,7 +108,7 @@ $(document).ready(function() {
             username: "{{ username }}",
             room: "{{ room_data.room_name }}"
             });
-        var clients = io.sockets.adapter.rooms{'{{ room_data.room_name  }}'].sockets;
+        var clients = io.sockets.adapter.rooms['{{ room_data.room_name  }}'].sockets;
         console.log(clients);
         });  // end socket connect
 
