Trouble shooting CORS issue on iphone

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -85,7 +85,7 @@ $(document).ready(function() {
         console.log("pick_log_list function triggered")
     });
 
-    var elmt = document.getElementById("pick_log_list");
+    //var elmt = document.getElementById("pick_log_list");
 
 
 
@@ -112,7 +112,7 @@ $(document).ready(function() {
         console.log(clients);
         });  // end socket connect
 
-        //let message_input = document.getElementById('message_input');
+
 
 
         document.getElementById('message_input_form').onsubmit = function(e) {
@@ -130,7 +130,7 @@ $(document).ready(function() {
             message_input.value ='';
             message_input.focus();
         }
-    });
+    //});
 
     //let page =0;
 
