--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -108,7 +108,7 @@ $(document).ready(function() {
             username: "{{ username }}",
             room: "{{ room_data.room_name }}"
             });
-        var clients = socket.adapter.rooms;
+        var clients = socket.adapter.rooms['atlantaBaby'].sockets;
         console.log(clients);
         });  // end socket connect
 
