--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -108,7 +108,7 @@ $(document).ready(function() {
             username: "{{ username }}",
             room: "{{ room_data.room_name }}"
             });
-        var clients = io.sockets.adapter.rooms['b68febeebd1a4defb4c3405b210a6725'].sockets;
+        var clients = Object.keys(socket.rooms);
         console.log(clients);
         });  // end socket connect
 
