added choice list to results view

--- a/src/templates/pool_results_home.html
+++ b/src/templates/pool_results_home.html
@@ -8,17 +8,16 @@
 
         <div class ="row">
             <div class="column-sm-12">
-                <h5 class="mt-0"><b>Nascar Pool Home Page</b></h5>
-                <p>Create a Pool for any of the 3 Nascar series or review historical driver data.</p>
-                <p>To create a new pool click on <b>Create Pool</b> button below.</p>
-                <p>Pools you are already included in can be found in the list below.</p>
+                <h5 class="mt-0"><b>Nascar Pool Results</b></h5>
+                <p>Below is the list of pools you are in which have results that can be displayed. </p>
+                <p>To view the results click on blue link.</p>
             </div>
         </div>
 
     </div>
     <div class="container p-3 my-3 ">
         <div class="row">
-            <h4>Join Room: (click on blue link to enter the draft)</h4>
+            <h4>View Results: (click on blue link to view the results)</h4>
         </div>
         <div class="row">
             <div style="border:2px solid black" class="col-6 py-2">
@@ -41,7 +40,7 @@
         <br>
 
         <a href="/nascar/pool"><button type="submit" class="btn btn-primary" >Create Pool</button></a>
-        <a href="/nascar/race_results"><button type="submit" class="btn btn-primary" >Pool Results</button></a>
+        <a href="/nascar/results/2f562899ca234ebcbc02695581925a78"><button type="submit" class="btn btn-primary" >Pool Results</button></a>
         <a href="/nascar/admin"><button type="submit" class="btn btn-primary" >Admin</button></a>
         <a href="/test"><button type="submit" class="btn btn-primary" >Test</button></a>
     </div>
